--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Patricia.png" alt="patricia profile picture"></td>
+      <td><img src="patricia.PNG" alt="patricia profile picture"></td>
       <td><a href="https://www.linkedin.com/in/patricia-curta-a77655137/"><h1>Patricia Curta</h1></a>
       <p><em>Junior Talent Development Specialist</em></p>
       <p>Highly effective Junior Talent Development Specialist,
