--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
   <hr>
   <a href="work-experience.html"><h2>Work Experience</h2></a>
+  <p>Brief summary about my work</p>
+  <ul>
+    <li>Junior Talent Development Speciaist @ Fortech</li>
+    <li>Talent Advisor @ Employer Branding Inern @ Unilever</li>
+    <li>HR Business Partner Intern @ Danone</li>
+  </ul>
   <hr>
   <h2>Education</h2>
   <p><strong><a href="https://www.saxion.edu/">Saxion University of Applied Sciences</a></strong></p>
@@ -47,8 +53,10 @@
   </ul>
   <hr>
   <a href="hobbies.html"><h2>My Hobbies</h2></a>
+  <p>Cick on "Hobbies" to learn more about what I enjoy doing.</p>
   <hr>
   <a href="contact.html"><h2>Contact Me</h2></a>
+  <p>If you want to get in touch, just leave me a message.</p>
 </body>
 
 </html>
