--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   <table cellspacing="20">
     <tr>
       <td><img src="patricia.PNG" alt="patricia profile picture"></td>
-      <td><a href="https://www.linkedin.com/in/patricia-curta-a77655137/"><h1>Patricia Curta</h1></a>
-      <p><em>Junior Talent Development Specialist</em></p>
-      <p>Highly effective Junior Talent Development Specialist,
-        motivated to succeed and deliver optimal results to organizations.<br>
-        Seeking to support the implementation of technology within HR and drive
-        innovation, research and organizational development.</p></td>
+      <td><a href="https://www.linkedin.com/in/patricia-curta-a77655137/">
+          <h1>Patricia Curta</h1>
+        </a>
+        <p><em>Junior Talent Development Specialist</em></p>
+        <p>Highly effective Junior Talent Development Specialist,
+          motivated to succeed and deliver optimal results to organizations.<br>
+          Seeking to support the implementation of technology within HR and drive
+          innovation, research and organizational development.</p>
+      </td>
     </tr>
   </table>
 
   <hr>
-  <a href="work-experience.html"><h2>Work Experience</h2></a>
-  <p>Brief summary about my work</p>
+  <a href="work-experience.html">
+    <h2>Work Experience</h2>
+  </a>
+  <p>Brief summary about my work. If you want to see in more details my Experience
+  please click on the link above.</p>
   <ul>
     <li>Junior Talent Development Speciaist @ Fortech</li>
     <li>Talent Advisor @ Employer Branding Inern @ Unilever</li>
@@ -56,7 +62,7 @@
   <p>Cick on "Hobbies" to learn more about what I enjoy doing.</p>
   <hr>
   <a href="contact.html"><h2>Contact Me</h2></a>
-  <p>If you want to get in touch, just leave me a message.</p>
+    <p>If you want to get in touch, just leave me a message.</p>
 </body>
 
 </html>
