--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <a href="work-experience.html">
     <h2>Work Experience</h2>
   </a>
-  <p>Brief summary about my work. If you want to see in more details my Experience
-  please click on the link above.</p>
+  <p>Brief summary about my work. For more details about my experience
+    please click on the <strong>link above</strong>.</p>
   <ul>
     <li>Junior Talent Development Speciaist @ Fortech</li>
     <li>Talent Advisor @ Employer Branding Inern @ Unilever</li>
