--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2>Work Experience</h2>
   </a>
   <p>Brief summary about my work. For more details about my experience
-    please click on the <strong>link above</strong>.</p>
+    please click on the <strong>link above.</strong></p>
   <ul>
     <li>Junior Talent Development Speciaist @ Fortech</li>
     <li>Talent Advisor @ Employer Branding Inern @ Unilever</li>
